test/cases/compile_errors/Issue_6823_dont_allow_._to_be_followed_by_.zig
fn foo() void {
    var sequence = "repeat".*** 10;
    _ = sequence;
}

// error
// backend=stage2
// target=native
//
// :2:28: error: '.*' cannot be followed by '*'; are you missing a space?
